@@ -179,6 +179,71 @@
 		
 		<!-- ========================================================================= -->
 		
+
+		<pstype name="ConfigV2QuadReg">
+		
+		    Configuration data for single quadrant.
+		
+            <attribute name="_shiftSelect" type="uint32_t" shape="TwoByTwosPerQuad" accessor="shiftSelect">
+            </attribute>
+
+            <attribute name="_edgeSelect" type="uint32_t" shape="TwoByTwosPerQuad" accessor="edgeSelect">
+            </attribute>
+
+            <attribute name="_readClkSet" type="uint32_t" accessor="readClkSet">
+            </attribute>
+
+            <attribute name="_readClkHold" type="uint32_t" accessor="readClkHold">
+            </attribute>
+
+            <attribute name="_dataMode" type="uint32_t" accessor="dataMode">
+            </attribute>
+
+            <attribute name="_prstSel" type="uint32_t" accessor="prstSel">
+            </attribute>
+
+            <attribute name="_acqDelay" type="uint32_t" accessor="acqDelay">
+            </attribute>
+
+            <attribute name="_intTime" type="uint32_t" accessor="intTime">
+            </attribute>
+
+            <attribute name="_digDelay" type="uint32_t" accessor="digDelay">
+            </attribute>
+
+            <attribute name="_ampIdle" type="uint32_t" accessor="ampIdle">
+            </attribute>
+
+            <attribute name="_injTotal" type="uint32_t" accessor="injTotal">
+            </attribute>
+
+            <attribute name="_rowColShiftPer" type="uint32_t" accessor="rowColShiftPer">
+            </attribute>
+
+            <attribute name="_ampReset" type="uint32_t" accessor="ampReset">
+            </attribute>
+
+            <attribute name="_digCount" type="uint32_t" accessor="digCount">
+            </attribute>
+
+            <attribute name="_digPeriod" type="uint32_t" accessor="digPeriod">
+            </attribute>
+
+            <attribute name="_readOnly" type="CsPadReadOnlyCfg" accessor="ro">
+            read-only configuration
+            </attribute>
+
+            <attribute name="_digitalPots" type="CsPadDigitalPotsCfg" accessor="dp">
+            </attribute>
+
+            <attribute name="_gainMap" type="CsPadGainMapCfg" accessor="gm">
+            Gain map.
+            </attribute>
+
+		</pstype>
+		
+		<!-- ========================================================================= -->
+		
 		<pstype name="ConfigV1" version="1" type_id="Id_CspadConfig">
 
             Configuration data for complete CsPad device.
@@ -393,6 +458,88 @@
         
 		<!-- ========================================================================= -->
 		
+		<pstype name="ConfigV4" version="4" type_id="Id_CspadConfig">
+		
+            Configuration data for complete CsPad device.
+        
+			<tag name="config-type"/>
+		
+            <attribute name="_concentratorVersion" type="uint32_t" accessor="concentratorVersion">
+            </attribute>
+
+            <attribute name="_runDelay" type="uint32_t" accessor="runDelay">
+            </attribute>
+
+            <attribute name="_eventCode" type="uint32_t" accessor="eventCode">
+            </attribute>
+
+            <attribute name="_protectionThresholds" type="ProtectionSystemThreshold" 
+                    shape="MaxQuadsPerSensor" accessor="protectionThresholds">
+            </attribute>
+
+            <attribute name="_protectionEnable" type="uint32_t" accessor="protectionEnable">
+            </attribute>
+
+            <attribute name="_inactiveRunMode" type="uint32_t" accessor="inactiveRunMode">
+            </attribute>
+
+            <attribute name="_activeRunMode" type="uint32_t" accessor="activeRunMode">
+            </attribute>
+
+            <attribute name="_testDataIndex" type="uint32_t" accessor="tdi">
+            </attribute>
+
+            <attribute name="_payloadPerQuad" type="uint32_t" accessor="payloadSize">
+            </attribute>
+
+            <attribute name="_badAsicMask0" type="uint32_t" accessor="badAsicMask0">
+            </attribute>
+
+            <attribute name="_badAsicMask1" type="uint32_t" accessor="badAsicMask1">
+            </attribute>
+
+            <attribute name="_AsicMask" type="uint32_t" accessor="asicMask">
+            </attribute>
+
+            <attribute name="_quadMask" type="uint32_t" accessor="quadMask">
+            </attribute>
+
+            <attribute name="_roiMask" type="uint32_t">
+            </attribute>
+
+            <attribute name="_quads" type="ConfigV2QuadReg" shape="MaxQuadsPerSensor" accessor="quads">
+            </attribute>
+
+            <method name="numAsicsRead" type="uint32_t">
+                <expr lang="C++" value="({self}._AsicMask &amp; 0xf)==1 ? 4 : 16"/>
+            </method>
+            
+            <method name="roiMask" type="uint32_t">
+                ROI mask for given quadrant
+                <arg name="iq" type="uint32_t"/>
+                <expr lang="C++" value="({self}._roiMask &gt;&gt; (8*iq)) &amp; 0xff"/>
+            </method>
+            
+            <method name="numAsicsStored" type="uint32_t">
+                Number of ASICs in given quadrant
+                <arg name="iq" type="uint32_t"/>
+                <expr lang="C++" value="__builtin_popcount({self}.roiMask(iq))*2"/>
+            </method>
+            
+            <method name="numQuads" type="uint32_t">
+                Total number of quadrants in setup
+                <expr lang="C++" value="__builtin_popcount({self}._quadMask)"/>
+            </method>
+
+            <method name="numSect" type="uint32_t">
+                Total number of sections (2x1) in all quadrants
+                <expr lang="C++" value="__builtin_popcount({self}._roiMask)"/>
+            </method>
+
+        </pstype>
+        
+		<!-- ========================================================================= -->
+		
 		<pstype name="ElementV1">
 
             CsPad data from single CsPad quadrant.
@@ -403,6 +550,8 @@
 		
 		    <xtc-config name="ConfigV1" />
 		    <xtc-config name="ConfigV2" />
+		    <xtc-config name="ConfigV3" />
+		    <xtc-config name="ConfigV4" />
 		
             <attribute name="_word0" type="uint32_t" accessor="">
             
@@ -485,6 +634,8 @@
 
             <xtc-config name="ConfigV1" />
             <xtc-config name="ConfigV2" />
+            <xtc-config name="ConfigV3" />
+            <xtc-config name="ConfigV4" />
 
             <attribute name="_quads" type="ElementV1" shape="{xtc-config}.numQuads()" 
                     accessor="quads">
@@ -507,6 +658,7 @@
 		
 		    <xtc-config name="ConfigV2" />
 		    <xtc-config name="ConfigV3" />
+		    <xtc-config name="ConfigV4" />
 		    
             <attribute name="_word0" type="uint32_t" accessor="">
             
@@ -587,6 +739,7 @@
 
             <xtc-config name="ConfigV2" />
             <xtc-config name="ConfigV3" />
+            <xtc-config name="ConfigV4" />
 
             <attribute name="_quads" type="ElementV2" shape="{xtc-config}.numQuads()" 
                         accessor="quads">
