@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-03
+2012-06-03 Andy Salnikov
+- upgrade to pdsdata V03-07-07
+- cspad adds new type ConfigV4
+
 Tag: V00-03-02
 2012-05-11 Andy Salnikov
 - upgrade to pdsdata V03-07-00
